2015-06-03  Oliver Kiddle  <opk@zsh.org>

	* 35360 (replacing 35357): configure.ac, Src/Modules/zpty.c:
	fix for configuring zpty on FreeBSD without pty.ko loaded

2015-06-03  Peter Stephenson  <p.stephenson@samsung.com>

	* 35374: Test/D07multibyte.ztst: add tab expansion test with
	double width characters.

2015-06-02  Peter Stephenson  <p.stephenson@samsung.com>

	* 35369: Test/A06assign.ztst, Test/E01options.ztst: better
	GLOB_ASSIGN testing.

2015-06-02  Mikael Magnusson  <mikachu@gmail.com>

	* 35365: Src/exec.c: GLOB_ASSIGN should only affect scalar
	assignments, this regressed in 33816.

2015-06-02  Peter Stephenson  <p.stephenson@samsung.com>

	* users/20243: Completion/compinit: turn off GLOB_ASSIGN in
	completion system.

2015-06-02  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 35270: Completion/Base/Utility/_describe: _describe: Document
	a known issue described in 35229 (which is the same thread as
	35127 and 34768)

	* 35271: Completion/Unix/Command/_beep: New completion:
	beep.

	* unposted: Doc/Zsh/options.yo: Typo fix

2015-06-02  Peter Stephenson  <p.stephenson@samsung.com>

	* 35359 (plus changed error strings in tests): Src/math.c,
	Test/C01arith.ztst: fix math parsing problem that trailing ")"
	wasn't detected; also improve error messages to indicate they
	refer to math expressions.

	* Baptiste Daroussin: 35357: Src/Modules/zpty.c:
	HAVE_POSIX_OPENPT is needed for FreeBSD zpty.

	* 35353: Doc/Zsh/builtins.yo, Src/builtin.c, Src/utils.c,
	Test/B03print.ztst: print -x and print -X expand tabs.

2015-06-02  Oliver Kiddle  <opk@zsh.org>

	* 35356: Completion/Unix/Type/_ttys, Completion/Unix/Command/_ps,
	Completion/Unix/Command/_last, Completion/Unix/Command/_pgrep,
	Completion/Unix/Command/_gdb: factor out completion of tty devices

	* Adrien Vergé: 35352 (tweaked): Completion/Redhat/Command/_dnf:
	completion for new Redhat package manager

2015-06-01  Peter Stephenson  <p.stephenson@samsung.com>
